# newrelic-grep

./: README.md  pyproject.toml
newrelic_grep/: cli_nrgrep.py  nrgrep.py
tests/: test_build_nrql.py
